# mri-alignment

./: .gitignore  README.md  config.py  pyproject.toml
checkpoints/: .gitkeep
notebooks/: exploracion.ipynb
scripts/: evaluate_model.py  export_clinical_ouputs.py  infer_new_images.py  reevaluate_checkpoints.py  train_model.py  train_multi_seed.py
src/: compat.py  dataset.py  evaluate.py  io_utils.py  losses.py  models.py  preprocessing.py  train.py  transmorph.py  utils.py  visualize.py
